arma-rs/tests/derive/struct_fail_unit.stderr
error: Unit structs aren't supported
 --> tests/derive/struct_fail_unit.rs:3:10
  |
3 | #[derive(IntoArma, FromArma)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `IntoArma` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Unit structs aren't supported
 --> tests/derive/struct_fail_unit.rs:3:20
  |
3 | #[derive(IntoArma, FromArma)]
  |                    ^^^^^^^^
  |
  = note: this error originates in the derive macro `FromArma` (in Nightly builds, run with -Z macro-backtrace for more info)
